syntax = "proto3";

option java_package = "com.haberdashervcs.common.protobuf";
option java_outer_classname = "BranchesProto";
option java_multiple_files = false;


message BranchEntry {

    // This is redundant since the name is in the row key, but for now I still want it as a field.
    string name = 1;

    int64 headCommitId = 2;

    // Branching-off point from main.
    int64 baseCommitId = 3;
}
